[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Music/A_newcredits.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/images/creditsbackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/SB_sprites.png" type="Texture" id=3]
[ext_resource path="res://Assets/images/fog.png" type="Texture" id=4]
[ext_resource path="res://scripts/credits.gd" type="Script" id=5]
[ext_resource path="res://Assets/fonts/pixeled/Pixeled.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/images/Deilquilo.png" type="Texture" id=7]
[ext_resource path="res://Assets/images/Longjim1.png" type="Texture" id=8]
[ext_resource path="res://Assets/images/NarKabhira.png" type="Texture" id=9]
[ext_resource path="res://Assets/images/aranortenlogo.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "fog"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect4:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 426.925, 555.36 ), Vector2( 371.736, 555.36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 707.578, 506.602 ), Vector2( 778.578, 506.602 ), Vector2( 707.578, 506.602 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -115.839, 525.63 ), Vector2( -9.83945, 525.63 ), Vector2( -115.839, 525.63 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -13.5676, 463.791 ), Vector2( -30.5676, 463.791 ), Vector2( -13.5676, 463.791 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "trns"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "rolldatext"
length = 61.3
tracks/0/type = "value"
tracks/0/path = NodePath("credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304.5, 850 ), Vector2( 304.5, 349 ), Vector2( 304.5, 349 ), Vector2( 304.5, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("credits2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7, 10, 12, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 84.5, 850 ), Vector2( 84.5, 850 ), Vector2( 84.5, 349 ), Vector2( 84.5, 349 ), Vector2( 84.5, -100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("credits3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 14, 16.9, 19.2, 21 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 267, 850 ), Vector2( 267, 850 ), Vector2( 267, 349 ), Vector2( 267, 349 ), Vector2( 267, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("credits4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 21, 24.1, 26.1, 28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 267, 850 ), Vector2( 267, 850 ), Vector2( 267, 93.5 ), Vector2( 267, 93.5 ), Vector2( 267, -700 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("credits7:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.001, 30.2, 33.1, 36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("credits6:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 30.2, 33.1, 36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("credits8:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 36, 39, 42 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("credits10:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 36, 39, 42 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("credits9:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 42, 45.1, 48 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("credits11:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 42, 45.1, 48 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("credits5:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.1, 48.9, 52.1, 54.2, 57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 137, 850 ), Vector2( 137, 850 ), Vector2( 137, 203 ), Vector2( 137, 203 ), Vector2( 137, -500 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("credits12:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 57.4, 57.9, 59.8, 60.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("credits13:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 57.4, 57.9, 59.8, 60.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("credits14:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 57.4, 57.9, 59.8, 60.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("credits15:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 58.3, 58.8, 59.8, 60.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("ending:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("VBoxContainer:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("black2:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 56.9, 57.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 6 )

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 994.011, 579.19 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
flip_h = true
hframes = 2
vframes = 2
frame = 2

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 426.925
margin_top = 555.36
margin_right = 926.953
margin_bottom = 836.36
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 707.578
margin_top = 506.602
margin_right = 1207.58
margin_bottom = 787.602
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -115.839
margin_top = 525.63
margin_right = 384.161
margin_bottom = 806.63
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = -13.5676
margin_top = 463.791
margin_right = 486.432
margin_bottom = 744.791
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ambient" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 17.0
color = Color( 0.839216, 0.14902, 0.14902, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fog" type="AnimationPlayer" parent="."]
anims/fog = SubResource( 1 )

[node name="black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="black2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="endingtrans" type="AnimationPlayer" parent="."]
anims/trns = SubResource( 2 )

[node name="credits" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = 466.0
margin_right = 207.5
margin_bottom = 536.001
custom_fonts/font = SubResource( 3 )
text = "Director ig idk: Plain"

[node name="credits12" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -244.0
margin_right = 327.5
margin_bottom = -174.0
custom_fonts/font = SubResource( 3 )
text = "And you"

[node name="credits15" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = 95.9995
margin_right = 207.5
margin_bottom = 166.0
custom_fonts/font = SubResource( 3 )
text = "I hope you had fun"

[node name="credits13" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -185.0
margin_right = 208.5
margin_bottom = -115.0
custom_fonts/font = SubResource( 3 )
text = "Brought to you by"

[node name="credits5" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -884.0
margin_right = 375.0
margin_bottom = -522.0
custom_fonts/font = SubResource( 3 )
text = "Thank you to
random tutorials I followed online lol
my brain
my gamr juice
ddsnag again cause he gamr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = 466.0
margin_right = 245.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 3 )
text = "Playtester: Gogomonow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits4" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = 466.0
margin_right = 245.0
margin_bottom = 1047.0
custom_fonts/font = SubResource( 3 )
text = "Emotional support ig:
Gogomonow
Jack
Omoro
Srb2thepast
Atlas
Deltaone
ddsnag"

[node name="credits2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = 466.0
margin_right = 427.5
margin_bottom = 536.0
custom_fonts/font = SubResource( 3 )
text = "Programmer, composer and sprites: Plain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rolldatext = SubResource( 4 )

[node name="credits7" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -178.0
margin_right = 300.0
margin_bottom = 178.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits8" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.82
margin_top = -200.683
margin_right = 464.18
margin_bottom = 419.317
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits9" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.636
margin_top = -262.09
margin_right = 303.364
margin_bottom = 337.91
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 9 )

[node name="credits6" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0473
margin_top = 136.542
margin_right = 331.953
margin_bottom = 206.543
custom_fonts/font = SubResource( 3 )
text = "Deliquilo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits10" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.547
margin_top = 136.542
margin_right = 313.453
margin_bottom = 206.543
custom_fonts/font = SubResource( 3 )
text = "Long Jim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits11" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.274
margin_top = 171.86
margin_right = 306.726
margin_bottom = 241.861
custom_fonts/font = SubResource( 3 )
text = "Narkabhira"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="credits14" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 100.0
margin_top = 264.0
margin_right = 914.0
margin_bottom = 467.0
texture = ExtResource( 10 )

[node name="ending" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.5
margin_top = -134.0
margin_right = 352.5
margin_bottom = -66.0
custom_fonts/font = SubResource( 5 )
text = "Would you like to save your score?"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -25.0
margin_right = 41.0
margin_bottom = 117.0

[node name="yes" type="Button" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 6 )
text = "Yes"

[node name="no" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 82.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 6 )
text = "No"

[connection signal="animation_finished" from="fog" to="." method="_on_fog_animation_finished"]
[connection signal="animation_finished" from="endingtrans" to="." method="_on_endingtrans_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
